2005-08-03  Chris Dean  <ctdean@sokitomi.com>

	* kawa/standard/Scheme.java (initScheme): Define new
	define-private-namespace function.

2005-07-29  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve): If prefix is bound in
	the current environment to a ClassType, add "class:" prefix to name.

2005-07-27  Per Bothner  <per@bothner.com>

	* Makefile.am (set-selected-java-source): New rule - set
	selected-java-source but only if changed.
	(select-java1, select-java2, select-java4, select-java4x, select-java5):
	Use new set-selected-java-source rule, which works with read-only files.

	* Makefile.am (dist-hook): Default is now select-java4.

	* configure.in (AC_INIT): Set version to 1.8beta.
	* build.xml (version.release): Likewise.

2005-07-25  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid-let.java (rewrite): Revert thinko in previous
	change.

2005-07-23  Per Bothner  <per@bothner.com>

	* kawa/standard/fluid-let.java (rewrite):  Push/pop position
	for better error messages.

2005-07-23  Alex Milowski  <alex@milowski.org>

	* kawa/standard/fluid-let.java (rewrite): Handle SyntaxForm.

2005-07-23  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (*print-base*, *print-radix*,
	*print-right-margin*, *print-miser-width*): New fluid variables.

	* kawa/GuiConsole.java (<init>): New shared parameter.
	Use to call InheritingEnvironment's setIndirectDefines.
	(actionPerformed): Update for modified Environment inheritance.

	* kawa/standard/TracedProcedure.java (applyN): setWithSave and
	setRestore now require an extra CallContext parameter.

2005-07-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (<init>): Default constructor now calls
	geNewEnvironment, to match old documentation/advice.
	Also sets the environ field.
	New non-default constructor called from clinit.

	* kawa/repl.java (propertyFields): New static table.
	(processArgs): Process arguments of the form 'NAME=VALUE'.
