@@ -1,3 +1,8 @@
+2005-08-03  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/Scheme.java (initScheme): Update field name used
+	slot-set!.
+
 2005-08-03  Chris Dean  <ctdean@sokitomi.com>
 
 	* kawa/standard/Scheme.java (initScheme): Define new
